<resources>
    <string name="app_name">FoodieCart</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals\n at Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foodie_cart">Foodie Cart</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="email">Email...!</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="google">Google</string>
    <string name="facebook">FaceBook</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="design_by_n_vaibhav_tormal">Design By\n Vaibhav Tormal</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="default_web_client_id" translatable="false">89869772166-lujikpqt5m45nie9dfoa22a8fsqr1g77.apps.googleusercontent.com</string>
    <string name="recent_buy">Recent buy</string>
    <string name="food_name">Food Name</string>
    <string name="_5">$5</string>
    <string name="received">Received</string>
    <string name="previously_buy">Previously buy</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="to_provide_you_with_the_best_dining_experience_we_need_your_permission_to_access_your_device_s_location_by_enabling_location_services_we_can_offer_personalized_restaurant_recommendations_accurate_delivery_estimates_and_ensure_a_seamless_food_delivery_experience">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="design_by_n_stubborn">Design By\n Vaibhav Tormal</string>
    <string name="food_name2">Food Name</string>
    <string name="short_description">Short description</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad</string>
    <string name="ingredients">Ingredients</string>
    <string name="strowberry_n_cream_nwheat">Strowberry\n Cream\nwheat</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="login">Login</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="place_my_order">Place My Order</string>
    <string name="recent_buy_items">Recent Buy Items</string>
    <string name="satisfy_your_cravings_one_click_away">Satisfy your cravings, one click away..!</string>
    <string name="design_by_n_vaibhav_tormal2">Design By\n Vaibhav Tormal</string>
    <string name="continue_with">Continue With</string>
    <string name="buy_again">Buy Again</string>
    <string name="cart">Cart</string>
    <string name="proceed">Proceed</string>
    <string name="congrats_nyour_order_placed">Congrats\nYour Order Placed</string>
    <string name="go_home">Go Home</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="menu">Menu</string>
    <string name="notification">Notification</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="click_here_to_edit">Click Here To Edit</string>
    <string name="enter_your_name">Enter your Name...!</string>
    <string name="someone_gmail_com">Someone@gmail.com</string>
    <string name="phone2">Phone..!</string>
    <string name="save_information">Save Information</string>
    <string name="search">Search</string>
</resources>