<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:background="@color/white"
    android:paddingEnd="6dp"
    tools:context="Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


     <!--   <Button
            android:id="@+id/Editbutton"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/textcolor"
            android:text="Edit Profile" /> -->


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yeonsung"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="@+id/BackButton" />

        <TextView
            android:id="@+id/Editbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:layout_marginBottom="16dp"
            android:drawableLeft="@drawable/edit"
            android:fontFamily="@font/yeonsung"
            android:gravity="center"
            android:text="@string/click_here_to_edit"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />




        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profileedittextshape"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:elevation="2dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/yeonsung"
            android:text="@string/name" />

        <EditText
            android:id="@+id/profilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/lato_regular"
            android:inputType="text"
            android:hint="@string/enter_your_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profileedittextshape"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="14dp"
            android:layout_weight="1"
            android:elevation="2dp"
            android:fontFamily="@font/yeonsung"
            android:text="@string/address"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileAddresss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_regular"
            android:background="@android:color/transparent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="2dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/enter_your_address"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profileedittextshape"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:elevation="2dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/yeonsung"
            android:text="Email" />

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_regular"
            android:elevation="2dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/someone_gmail_com" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/profileedittextshape"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/yeonsung"
            android:elevation="2dp"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/lato_regular"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone2" />
    </LinearLayout>
    </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveInfoButton"
            android:background="@drawable/proceedbutonshape"
            android:elevation="5dp"
            android:layout_marginBottom="32dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="bottom"
            android:textColor="@color/textcolor"
            android:fontFamily="@font/yeonsung"
            android:textSize="20sp"
            android:text="@string/save_information" />

</FrameLayout>